<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp">

    <ImageView
        android:id="@+id/app_img"
        android:layout_width="92sp"
        android:layout_height="92sp"
        android:src="@drawable/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8sp"/>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/app_img"
        android:layout_marginTop="4sp"
        android:text="@string/app_name"
        android:fontFamily="serif"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/developed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8sp"
        android:layout_below="@id/app_name"
        android:text="@string/dev"
        android:fontFamily="serif"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/developed_by"
        android:layout_marginTop="16sp"
        android:layout_marginLeft="16sp"
        android:text="@string/first"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first"
        android:layout_marginTop="4sp"
        android:layout_marginLeft="16sp"
        android:text="@string/second"
        android:fontFamily="serif"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:layout_marginLeft="16sp"
        android:layout_below="@id/second"
        android:text="@string/third"
        android:fontFamily="serif"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8sp"
        android:layout_below="@id/third"
        android:background="@android:color/holo_red_light"
        android:text="Close"
        android:fontFamily="serif"
        android:textColor="@android:color/white"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"/>

</RelativeLayout>